added: ssl, user data in JWT, sending messages for email verification.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,14 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+# kafka
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
+
+spring.kafka.consumer.group-id=${CONSUMER_GRUP_ID}
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.max-poll-records=500
+
 # ssl
 server.ssl.key-store=${KEYSTORE_PATH}
 server.ssl.key-store-password=${KEYSTORE_PASSWORD}
