--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 spring.datasource.url=${DATABASE_JDBC_URL}
 
 spring.jpa.database=postgresql
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -18,6 +18,11 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.consumer.max-poll-records=500
 
+# redis
+spring.cache.type=redis
+spring.data.redis.url==${REDIS_HOST}
+
+
 # ssl
 server.ssl.key-store=${KEYSTORE_PATH}
 server.ssl.key-store-password=${KEYSTORE_PASSWORD}
@@ -28,4 +33,4 @@ server.ssl.key-alias=${KEYSTORE}
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-logging.level.root=WARN
+#logging.level.root=warn
