--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>JWT-auth</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>JWT-auth</name>
-	<description>Demo project for Spring Boot</description>
+	<description>JWT-auth project</description>
 	<url />
 	<licenses>
 		<license />
@@ -48,7 +48,16 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
-
+		<!--Spring cache-->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        
 		<!--doc-->
 		<dependency>
 			<groupId>org.springdoc</groupId>
