--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.consumer.max-poll-records=500
 
 # redis
-spring.cache.type=redis
+#spring.cache.type=redis
 spring.data.redis.url==${REDIS_HOST}
 
 
